edition = "2023";
package protobuf;
option go_package = "runner/protobuf";

message Notification {
  oneof data {
    StreamStartNotification stream_start = 1;
    StreamEndNotification stream_end = 2;
    HeartbeatNotification heartbeat = 3;
  }
}

message StreamInfo {
  uint64 id = 1;
}

message StreamStartNotification {
  StreamInfo stream = 1;
  string url = 2;
}

message StreamEndNotification {
  StreamInfo stream = 1;
}

message HeartbeatNotification {
  string hostname = 1;
  bool draining = 2;
  uint64 job_count = 3;
}

message NotificationResponse {

}
